# jsflow

./: .gitignore  .gitmodules  .pylintrc  README.md  bench_results.json  evaluate_regress.py  evaluation_results.json  generate_graph.py  install.sh  pyproject.toml  requirements.txt  session-ses_4310.mdclear
docs/: ARCHITECTURE.md  CONSTRAINT_SOLVING.md  LLM_STUB_GENERATION_RESEARCH.md  TROUBLESHOOTING.md  USAGE.md  VULNERABILITIES.md
docs/source/: conf.py  index.rst
esprima-csv/: esprima_wrapper.js  main.js  package-lock.json  search.js
evaluation/: EvalJS.md  run_bench.py  run_secbench.py
jsflow/: __init__.py  __main__.py  esprima.py  graph.py  helpers.py  helpers2.py  launcher.py  logger.py  modeled_builtin_modules.py  modeled_js_builtins.py  opgen.py  solver.py  trace_rule.py  utilities.py  vul_checking.py  vul_func_lists.py
jsflow/constraints/: README.md  __init__.py  builder.py  conditions.py  engine.py  expressions.py
jsflow/core/: __init__.py  esprima.py  graph.py  opgen.py  solver.py  trace_rule.py
jsflow/llm_providers/: base.py  codex.py  demo.py  kilocode.py  opencode.py
jsflow/models/: __init__.py  modeled_builtin_modules.py  modeled_js_builtins.py
jsflow/utils/: __init__.py  helpers.py  helpers2.py  logger.py  utilities.py
jsflow/vuln/: __init__.py  vul_checking.py  vul_func_lists.py
npmtest/: multi_run_helper.py
tests/: __init__.py  nosql_injection.js  os_command_injection.js  prototype_pollution.js  xss_safe.js
tests/regress/: BENCHMARK_METADATA_V3.json  ENHANCEMENT_SUMMARY.md  README_BENCHMARK.md  WORLDS_BEST_SUMMARY.md  ssrf.js  (+22 more)
(+56 files in other folders)
